fixed layout issue, removed moment.js its too heavy

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,13 +35,40 @@ app-layout {
   height: 100vh;
 }
 
-app-timeline.common-flex-container {
+.common-parent-content {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: start;
+  align-items: stretch;
+  margin: 0;
+  padding: 0;
+  min-height: 100%;
+  height: 100%;
+  min-width: 100%;
+  width: 100%;
+}
+
+.bootstrapping-user {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  min-height: 100%;
+  height: 100%;
+  min-width: 100%;
+  width: 100%;
+}
+
+.common-app-container {
   // properties as flex container
   display: flex;
   flex-flow: column;
-  // justify-content: flex-start;
+  justify-content: space-between;
   align-items: stretch;
-  // align-content: stretch;
+  align-content: stretch;
   // other styles
   box-sizing: border-box;
   margin: 0;
@@ -51,6 +78,7 @@ app-timeline.common-flex-container {
   min-width: 100%;
   overflow: hidden;
   background: #e3f2fd;
+  
 }
 
 .common-header {
@@ -60,7 +88,12 @@ app-timeline.common-flex-container {
 }
 
 .common-content {
+  // flex: 1 1 auto;
+  display: block !important;
+  // margin: auto;
   overflow-y: auto;
+  // height: auto;
+  // width: auto;
   padding: 16px 0;
   overflow: overlay;
   -ms-overflow-style: -ms-autohiding-scrollbar;
